# discordrs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  USAGE.md  index.html
.github/workflows/: ci.yml  docs-pages.yml  static.yml
discordrsdocs/: README.md  _navbar.md  _sidebar.md  custom.md  index.html  styles.css
discordrsdocs/docs/api/: builders.md  cache-and-collectors.md  commands.md  core-types-and-constants.md  gateway.md  http-and-helpers.md  interactions-endpoint.md  parsers.md  voice.md
discordrsdocs/docs/guide/: architecture.md  changelog.md  crate-readme.md  deployment.md  full-manual.md  getting-started.md  interaction-flow.md  pdf-manual.md  testing-and-coverage.md  usage-guide.md
discordrsdocs/ko/: README.md  _navbar.md  _sidebar.md
discordrsdocs/ko/api/: builders.md  core-types-and-constants.md  gateway.md  http-and-helpers.md  interactions-endpoint.md  parsers.md
discordrsdocs/ko/guide/: architecture.md  deployment.md  full-manual.md  getting-started.md  interaction-flow.md  pdf-manual.md  usage-guide.md
examples/: cache_bot.rs
src/: bitfield.rs  cache.rs  collection.rs  collector.rs  command.rs  constants.rs  error.rs  event.rs  helpers.rs  http.rs  interactions.rs  lib.rs  model.rs  oauth2.rs  prelude.rs  response.rs  sharding.rs  types.rs  voice.rs  voice_runtime.rs  ws.rs
src/builders/: components.rs  container.rs  mod.rs
src/gateway/: bot.rs  client.rs  mod.rs
src/http/: body.rs  messages.rs  paths.rs  rate_limit.rs  tests.rs
src/parsers/: interaction.rs  mod.rs  modal.rs
tests/: live_voice_dave.rs
