[package]
name = "discordrs"
version = "0.3.0"
edition = "2021"
description = "Standalone Discord bot framework with Components V2, Gateway, and HTTP client"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/discordrs"
keywords = ["discord", "framework", "components", "modal", "bot"]
categories = ["api-bindings"]

[features]
default = []
gateway = [
    "dep:tokio-tungstenite",
    "dep:flate2",
    "dep:futures-util",
    "dep:async-trait",
    "dep:tokio",
]
interactions = [
    "dep:axum",
    "dep:ed25519-dalek",
    "dep:hex",
    "dep:async-trait",
    "dep:tokio",
]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"], optional = true }
flate2 = { version = "1", optional = true }
futures-util = { version = "0.3", optional = true }
axum = { version = "0.7", optional = true }
ed25519-dalek = { version = "2", optional = true }
hex = { version = "0.4", optional = true }
async-trait = { version = "0.1", optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"], optional = true }
tracing = "0.1"
