[package]
name = "discordrs"
version = "1.1.0"
edition = "2021"
description = "discord.rs - Standalone Discord bot framework with Components V2, Gateway, and HTTP client"
authors = [
    "ingwannu <ingwannu@teamwicked.me>",
    "ingwannu <ingwannu@gmail.com>",
]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/discordrs"
repository = "https://github.com/Ingwannu/discord.rs"
homepage = "https://github.com/Ingwannu/discord.rs"
keywords = ["discord", "framework", "components", "modal", "bot"]
categories = ["api-bindings"]

[features]
default = []
gateway = [
    "dep:tokio-tungstenite",
    "dep:flate2",
    "dep:futures-util",
    "dep:async-trait",
]
cache = []
collectors = ["gateway"]
sharding = ["gateway"]
voice = [
    "dep:tokio-tungstenite",
    "dep:futures-util",
    "dep:aes-gcm",
    "dep:chacha20poly1305",
    "dep:opus-decoder",
]
dave = ["voice", "dep:davey"]
interactions = [
    "dep:axum",
    "dep:ed25519-dalek",
    "dep:hex",
    "dep:async-trait",
]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"], optional = true }
flate2 = { version = "1", optional = true }
futures-util = { version = "0.3", optional = true }
axum = { version = "0.7", optional = true }
ed25519-dalek = { version = "2", optional = true }
hex = { version = "0.4", optional = true }
async-trait = { version = "0.1", optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync", "net"] }
tracing = "0.1"
aes-gcm = { version = "0.10", optional = true }
chacha20poly1305 = { version = "0.10", optional = true }
opus-decoder = { version = "0.1", optional = true }
davey = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[example]]
name = "cache_bot"
required-features = ["gateway", "cache"]

[[example]]
name = "collector_bot"
required-features = ["gateway", "collectors"]

[[example]]
name = "gateway_bot"
required-features = ["gateway"]

[[example]]
name = "interactions_endpoint"
required-features = ["interactions"]

[[example]]
name = "sharding_bot"
required-features = ["sharding"]

[[example]]
name = "typed_interactions_endpoint"
required-features = ["interactions"]

[[example]]
name = "voice_bot"
required-features = ["voice"]

